eureka client添加actuator用于健康管理和服务下线

--- a/eureka_server/src/main/resources/application-server1.properties
+++ b/eureka_server/src/main/resources/application-server1.properties
@@ -8,7 +8,7 @@ eureka.instance.hostname=eureka-master
 #是否向服务注册中心注册自己
 #eureka.client.register-with-eureka=false
 
-#是否检索服务
+#是否检索服务,本地缓存注册实例,服务消费者首先使用缓存注册的实例,默认时间30s
 #eureka.client.fetch-registry=false
 
 #服务注册中心的配置内容，指定服务注册中心的位置 eureka集群,相互注册,多个注册中心用,分开
